# piplexed

./: .gitignore  404.html  CHANGELOG.md  LICENSE.txt  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
Command-line-options/: index.html
Future-development/: index.html
Getting-started/: index.html
How-piplexed-works/: index.html
Installation/: index.html
Release-notes/: index.html
Why-piplexed/: index.html
css/: custom.css
docs/: Caveats.md  Command-line-options.md  Future-development.md  Getting-started.md  How-piplexed-works.md  Installation.md  Release-notes.md  Why-piplexed.md  index.md
docs/css/: custom.css
requirements/: all.txt  docs.in  docs.txt  linting.in  linting.txt  pyproject.txt  tests.in  tests.txt
search/: search_index.json
src/piplexed/: __init__.py  _print_table.py  _print_tree.py  app.py  cli.py  pipx_venvs.py  pypi_info.py  utils.py  uv_tool_venvs.py
src/piplexed/display/: print_table.py  print_tree.py
src/piplexed/pypi/: pypi_info.py
src/piplexed/venvs/: __init__.py  pipx_venvs.py  uv_venvs.py
tests/: __init__.py  test_app.py  test_cli.py  test_pipx_venvs.py  test_print_table.py  test_print_tree.py  test_pypi_info.py  test_utils.py  test_uv_venvs.py  test_version.py
