[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piplexed"
description = 'Find outdated python packages installed with pipx'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["pipx", "cli", " dependency"]
authors = [
  { name = "Andrew White", email = "white-aj@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pypi_simple>=1.1.0",
  "packaging",
  "typer",
  "rich",
  "platformdirs"
]
dynamic = ["version"]

[project.scripts]
piplexed = "piplexed.cli:app"

[project.urls]
Documentation = "https://aj-white.github.io/piplexed/"
Issues = "https://github.com/aj-white/piplexed/issues"
Source = "https://github.com/aj-white/piplexed"

[tool.hatch.version]
path = "src/piplexed/version.py"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "COM",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "RUF",
  "S",
  "TD",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords and asserts
  "S101", "S105", "S106", "S107",
  # Ignore complexity and formatting conflicts
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "COM812", "ISC001"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["piplexed"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]

[tool.ruff.lint.per-file-ignores]
"src/piplexed/cli.py" = ["FBT001", "A001"]  # typer uses booleans in CLI args

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = false

[tool.coverage.run]
branch = true
source = ["piplexed"]

[tool.coverage.paths]
source = ["src", ".nox/tests-*/**/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "noxfile"
disallow_untyped_decorators = false

[tool.uv]
python-downloads = "never"